crates/cadenza-compiler/test-data/semantics/variables-error-typo-in-variable-name.expected
error: undefined variable: `vlaue`
 --> test.cdz:2:1
  |
2 | vlaue
  | ^^^^^ not found in this scope
  |
  = help: did you mean `value`?