crates/cadenza-compiler/test-data/semantics/variables-error-typo-in-variable-name.cdz
let value = 10
vlaue